k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: high-assurance-api-svc
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: high-assurance-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
